Fixed some spacing issues

--- a/src/components/itemSection.scss
+++ b/src/components/itemSection.scss
@@ -21,7 +21,7 @@
 
 @media only screen and (max-width: 600px) {
   .section {
-    padding: 0px 5px;
+    padding: 0px 0px;
     justify-content: center;
     align-items: center;
 
@@ -32,6 +32,7 @@
     .items {
       flex-wrap: none;
       justify-content: center;
+      padding: 0;
     }
   }
 }
